# pdf-navigator-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
pdf_navigator_mcp/: __init__.py  config.py  pdf_navigator.py  server.py
tests/: test_config.py  test_pdf_navigator.py
